<resources>
    <string name="app_name">Hastlekh</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="suggestion">A</string>
    <string name="camera_permission">This feature needs camera usage permission as we use your mobile camera to scan the presence of an infrared camera. Allow the camera usage permission and scan room from our infrared camera scanner feature.</string>
    <string name="oK">Ok</string>
    <string name="place_your_letter_inside_the_box_to_capture">Place your letter inside the box to capture</string>
    <string name="saveimage">saveImage</string>
    <string name="capturebutton">captureButton</string>
    <string name="discardimage">discardImage</string>
    <string name="character">A</string>
    <string name="characterimage">characterImage</string>
    <string name="savenote">saveNote</string>
    <string name="noteHint">Type your notes here</string>
</resources>