<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CemeraFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <SurfaceView
                android:id="@+id/surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/inner" />

                <TextView
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/inner" />

                <TextView
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/inner" />

                <TextView
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/inner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/suggestion"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/captureBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorWhite"
                    android:src="@drawable/ic_round_camera_24"
                    app:fabSize="auto" />

            </LinearLayout>
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/alert_card"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="50dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_permission"
                    android:textAlignment="center"
                    android:textColor="@color/colorPMSBlack"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.238"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/request"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="15dp"
                    app:cardBackgroundColor="@color/colorAccent"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/info">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical|center_horizontal"
                        android:text="@string/oK"
                        android:textColor="@color/colorWhite" />
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>