<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <SurfaceView
                android:id="@+id/surface"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/place_your_letter_inside_the_box_to_capture"
                android:textColor="@color/colorTwitterBlue"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:background="@drawable/scanner"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/controlsLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirmImageLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/colorBlack"
                    app:cardCornerRadius="50dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorTransparent"
                        android:paddingStart="15dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp">

                        <ImageView
                            android:id="@+id/discardImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/discardimage"
                            android:src="@drawable/ic_round_close_24" />

                        <ImageView
                            android:id="@+id/saveImage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:contentDescription="@string/saveimage"
                            android:src="@drawable/ic_round_check_24" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/cameraControlLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/alert_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:cardBackgroundColor="#CDFFFFFF"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="50dp">

                        <RelativeLayout
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:padding="5dp">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/characterList"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:scrollbars="none">

                            </androidx.recyclerview.widget.RecyclerView>

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/characterLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:visibility="visible"
                        app:boxBackgroundColor="@color/colorPrimary"
                        app:boxBackgroundMode="none"
                        app:boxStrokeColor="@color/colorAccent"
                        app:counterEnabled="true"
                        app:counterMaxLength="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/character"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/characterbox"
                            android:cursorVisible="true"
                            android:gravity="center_vertical"
                            android:maxLength="1"
                            android:textColor="#BFFFFFFF"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cameraControlCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorBlack"
                        app:cardCornerRadius="50dp"
                        app:cardUseCompatPadding="true">

                        <RelativeLayout
                            android:layout_width="330dp"
                            android:layout_height="wrap_content"
                            android:paddingStart="10dp"
                            android:paddingTop="4dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="4dp">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/imageContainer"
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                app:cardBackgroundColor="#AFBFBFBD"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:id="@+id/capturedImage"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/capturebutton"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/ic_round_brightness_1_24" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:layout_centerInParent="true"
                                app:cardBackgroundColor="@color/colorBlack"
                                app:cardCornerRadius="50dp">

                                <ImageView
                                    android:id="@+id/captureBtn"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:contentDescription="@string/capturebutton"
                                    android:src="@drawable/ic_round_camera_24" />

                            </androidx.cardview.widget.CardView>


                            <ToggleButton
                                android:id="@+id/toggleFlash"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/toggle_flash"
                                android:textOff=""
                                android:textOn="" />

                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>